<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.sheltortoiseusa.brewingbeer.MainActivity"
    android:background="@android:color/holo_orange_dark">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_orange_light"
        android:paddingBottom="30dp"
        android:id="@+id/TextViewLayout">

        <TextView
            android:text="@string/grain_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:paddingTop="30dp"
            android:paddingLeft="30dp"
            android:textSize="18sp" />

        <TextView
            android:text="@string/grain_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:paddingTop="15dp"
            android:paddingLeft="30dp"
            android:textSize="18sp" />

        <TextView
            android:text="@string/grain_pps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:paddingTop="15dp"
            android:paddingLeft="30dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/EditTextLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/grain_name2"
            android:ems="10"
            android:paddingTop="30dp"
            android:textSize="14sp"
            android:id="@+id/editText1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/grain_weight2"
            android:ems="10"
            android:id="@+id/editText2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/grain_pps2"
            android:ems="10"
            android:id="@+id/editText3"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/add_grain_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button1"
            android:onClick="addGrain"
            android:textAllCaps="false" />

        <Button
            android:text="@string/compute_sg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button2"
            android:textAllCaps="false"
            android:onClick="computeSG" />

        <Button
            android:text="@string/clear_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button3"
            android:textAllCaps="false"
            android:onClick="clearAll" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ButtonLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/rootView">

    </ListView>

</RelativeLayout>
